# protobuffer_template

./: CMakeLists.txt  README.md  conanfile.txt
proto/: ufc.proto
src/: main.cpp
